<resources>
    <string name="app_name">Calculator Lock – Lock Video &amp; Photo</string>
    <string name="tool_name">Calculator Lock</string>
    <string name="Calculator">Calculator</string>
    <string name="Created_time">Created Time</string>
    <string name="Delete_error">Some Error Occured in Deleting.</string>
    <string name="Fingerprint">Fingerprint</string>
    <string name="Move_error">Some Error Occured in Moving.</string>
    <string name="Support_title">Support</string>
    <string name="Support_value">Support@example.net</string>
    <string name="Unhide_error">Some Error Occured in Resotring.</string>
    <string name="Visit_title">Visit</string>
    <string name="Visit_value">http://www.example.net</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="accept">Accept</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_download">Download</string>
    <string name="action_more">More</string>
    <string name="action_ok">OK</string>
    <string name="action_settings">Settings</string>
    <string name="add_folder">Create Folder</string>
    <string name="add_folder_hint">Enter Folder Name</string>
    <string name="alert_dialogTopStorageOption">Select Storage Location</string>
    <string name="alert_dialog_phone_memory">Phone Memory</string>
    <string name="alert_dialog_sd_card">SD Card</string>
    <string name="app_4shared">4shared</string>
    <string name="app_Box">Box</string>
    <string name="app_Dropbox">Dropbox</string>
    <string name="app_Livejournal">LiveJournal</string>
    <string name="app_Technorati">Technorati</string>
    <string name="app_amazon">Amazon</string>
    <string name="app_blogger">Blogger</string>
    <string name="app_dailymotion">Dailymotion</string>
    <string name="app_delicious">Delicious</string>
    <string name="app_digg">Digg</string>
    <string name="app_diigo">diigo</string>
    <string name="app_docin">docin</string>
    <string name="app_docstoc">docstoc</string>
    <string name="app_ebay">ebay</string>
    <string name="app_ezinearticles">Ezine Articles</string>
    <string name="app_facebook">Facebook</string>
    <string name="app_flickr">Flickr</string>
    <string name="app_folkd">folkd</string>
    <string name="app_foursquare">Foursquare</string>
    <string name="app_google_plus">Google+</string>
    <string name="app_hi5">Hi5</string>
    <string name="app_imdb">IMDB</string>
    <string name="app_instagram">Instagram</string>
    <string name="app_instapaper">instapaper</string>
    <string name="app_issuu">issuu</string>
    <string name="app_linkedin">LinkedIn</string>
    <string name="app_meet_me">MeetMe</string>
    <string name="app_meetup">Meetup</string>
    <string name="app_myspace">Myspace</string>
    <string name="app_name1">My Calculator</string>
    <string name="app_name_disguised">Calculator vault</string>
    <string name="app_pinterest">Pinterest</string>
    <string name="app_plurk">plurk</string>
    <string name="app_quora">Quora</string>
    <string name="app_reddit">Reddit</string>
    <string name="app_scoop">scoop</string>
    <string name="app_scribd">Scribd</string>
    <string name="app_skype">Skype</string>
    <string name="app_slideshare">slideshare</string>
    <string name="app_sound_cloud">SoundCloud</string>
    <string name="app_squidoo">squidoo</string>
    <string name="app_storify">storify</string>
    <string name="app_stumbleupon">Stumbleupon</string>
    <string name="app_tagged">Tagged</string>
    <string name="app_tumblr">Tumblr</string>
    <string name="app_twitter">Twitter</string>
    <string name="app_vimeo">Vimeo</string>
    <string name="app_wikipedia">Wikipedia</string>
    <string name="app_yahoo_answer">Yahoo answer</string>
    <string name="app_yelp">yelp</string>
    <string name="app_youtube">YouTube</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appicon">App Icon</string>
    <string name="appicondetail">Select your App Icon</string>
    <string name="audio">Audio</string>
    <string name="backup_emildilog_desc">If you don\'t set email address here, then your password will not be recovered. Any time you can set or change email address from Recovery of Credentials in Settings.</string>
    <string name="backup_emildilog_desctitle">Warning:</string>
    <string name="backup_emildilog_title">Enter email address to recover security credential</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cal_pin_text">Set calculator PIN and tap % sign to save</string>
    <string name="cal_pin_text_conf">Enter calculator PIN and tap % sign </string>
    <string name="cal_pin_text_confirm">Confirm calculator PIN and tap % sign to save</string>
    <string name="cannot_download">Can only download \"http\" or \"https\" URLs.</string>
    <string name="category_name">Category Name</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_agree_button">First select \"Agree\"</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="commono_google_play_services_api_unavailable_text">This app requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="decline">Decline</string>
    <string name="decoy_mode_toast_disguise">Decoy mode is not available because you set Calcualtor disguise mode.</string>
    <string name="del_bookmarks">Are you sure you want to delete bookmark(s) ?</string>
    <string name="del_download_history">Are you sure you want to delete browsing history ?</string>
    <string name="del_history">Are you sure you want to delete browsing history ?</string>
    <string name="delete">Delete</string>
    <string name="delete_entry">Are you sure you want to delete this entry ?</string>
    <string name="delete_note">Are you sure you want to delete this Note ?</string>
    <string name="delete_toast">Are you sure you want to Delete</string>
    <string name="delete_todo">Are you sure you want to delete this To do list ?</string>
    <string name="detail">Detail</string>
    <string name="dialog_download">Do you want to download this file?</string>
    <string name="disable_operation_cal">Only use digits 0 to 9</string>
    <string name="discard_changes">Are you sure you want to discard changes?</string>
    <string name="download_no_sdcard_dlg_msg">USB storage is required to download the file.</string>
    <string name="download_no_sdcard_dlg_title">No SD card</string>
    <string name="download_pending">Starting download…</string>
    <string name="download_sdcard_busy_dlg_msg">The storage is busy. To allow downloads, touch Turn Off USB Storage in the notification.</string>
    <string name="download_sdcard_busy_dlg_title">USB storage unavailable</string>
    <string name="dropbox_Audios">Audios</string>
    <string name="dropbox_Documents">Docs</string>
    <string name="dropbox_Photos">Photos</string>
    <string name="dropbox_Videos">Videos</string>
    <string name="edit">Edit</string>
    <string name="edit_options_deletephoto">Are you sure you want to Delete photo(s)?</string>
    <string name="edit_options_deletevideo">Are you sure you want to Delete video(s)?</string>
    <string name="empty_note">Can not save empty note</string>
    <string name="empty_note_folder">No note(s) added yet</string>
    <string name="empty_note_name">Please enter note name</string>
    <string name="empty_wallet_folder">No entry(s) added yet</string>
    <string name="enter_password">Enter password...</string>
    <string name="entry">Entry</string>
    <string name="entry_deleted">Entry deleted successfully</string>
    <string name="entry_exists">Entry already Exists</string>
    <string name="entry_field">Entry Field</string>
    <string name="entry_name_enter">Please provide entry name</string>
    <string name="entry_not_deleted">Entry could not be deleted</string>
    <string name="entry_not_saved">Entry could not be saved</string>
    <string name="entry_saved">Entry saved successfully</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="f0x5389e0a">\"\"</string>
    <string name="lblFeature3">Gallery</string>
    <string name="lblFeature11">Camera</string>
    <string name="lblSave">Save</string>
    <string name="lbl_Forgot_Pattern">Forgot Pattern?</string>
    <string name="lbl_No_Hackattempt">No hack attempt(s) yet</string>
    <string name="lbl_more_Hack_Attempts_btn_Delete">Delete</string>
    <string name="lbl_more_Hack_Attempts_btn_Select_All">Select All</string>
    <string name="lblforgotpassword">Forgot password?</string>
    <string name="lblsetting_RecoveryofCredentials_email_hint">Enter email…</string>
    <string name="lblsetting_SecurityCredentials_Setpasword_Tryagain">Wrong password, try again</string>
    <string name="lblsetting_SecurityCredentials_Setpattern_Tryagain">Wrong pattern, try again</string>
    <string name="lblsetting_SecurityCredentials_recoery_email_activity_description">In case of forgot security lock, an auto generated email will be sent to your set email address</string>
    <string name="lblsetting_SecurityCredentials_setpassword_Cancel">Cancel</string>
</resources>