<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/_20sdp"
        android:paddingBottom="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:background="@drawable/app_logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLines="2"
            android:paddingStart="@dimen/_15sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_wrong_password_pin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:fontFamily="@font/font_medium"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/lblsetting_SecurityCredentials_Setpasword_Tryagain"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtPassword"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="match_parent"
            android:cursorVisible="true"
            android:focusable="true"
            android:fontFamily="@font/font_medium"
            android:gravity="center"
            android:hint="@string/enter_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="17"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_14ssp">

            <requestFocus />
        </androidx.appcompat.widget.AppCompatEditText>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtforgotpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_semi_bold"
        android:gravity="center|end"
        android:paddingStart="0dp"
        android:paddingTop="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingBottom="@dimen/_10ssp"
        android:text="@string/lblforgotpassword"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_medium"
        android:gravity="center"
        android:text="@string/lblsetting_SecurityCredentials_Setpasword_Tryagain"
        android:textColor="@color/white"
        android:textSize="@dimen/_11ssp" />

    <FrameLayout
        android:id="@+id/camera_preview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>