<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/ll_No_hackattempts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/hack_attempt_empty_icon" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_No_Hackattempt"
                android:textColor="@color/Color_Secondary_Font"
                android:textSize="19sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_hackattempts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible">

            <LinearLayout
                android:id="@+id/rootViewGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <ListView
                android:id="@+id/HackAttemptListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:divider="#00000000"
                android:dividerHeight="2dp"
                android:listSelector="@drawable/app_list_selector"
                android:scrollbars="none"
                android:scrollingCache="false" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_DeleteAndSelectAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/ll_Delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_bottom_baar_album"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lblDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/lbl_more_Hack_Attempts_btn_Delete"
                android:textColor="@color/black_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_SelectAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_bottom_baar_album"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lblSelectAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/lbl_more_Hack_Attempts_btn_Select_All"
                android:textColor="@color/black_color" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
